Modernize build chain

--- a/src/styles/h5peditor-portfolio-chapter.scss
+++ b/src/styles/h5peditor-portfolio-chapter.scss
@@ -1,4 +1,4 @@
-@import './h5peditor-portfolio-chapter-main.scss';
+@import "@styles/h5peditor-portfolio-chapter-main";
 
 .h5peditor-portfolio-chapter {
   .field-name-chapter {
